fix protobuf message construction
